--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjb6+5GbkX4uDEpL4GtQV4",
+      "authorship_tag": "ABX9TyPLByIZSuTnFqR+fxermuZA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,24 +40,26 @@
     {
       "cell_type": "code",
       "source": [
-        "import google.generativeai as genai\n"
+        "import google.generativeai as genai\n",
+        "from google.colab import userdata\n",
+        "api_key = userdata.get('SECRET_KEY')"
       ],
       "metadata": {
         "id": "NVZJ71eIymU5"
       },
-      "execution_count": 31,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "GOOGLE_API_KEY=\"AIzaSyBC9voL1v4imitJckFL2ARuyQwC54MqJqk\"\n",
+        "GOOGLE_API_KEY=api_key=api_key\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
       ],
       "metadata": {
         "id": "Vfft9ekxzAzd"
       },
-      "execution_count": 32,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -68,7 +70,7 @@
       "metadata": {
         "id": "8bEm8tO3zzma"
       },
-      "execution_count": 33,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -84,9 +86,9 @@
           "height": 138
         },
         "id": "DhktVkgc2cP9",
-        "outputId": "d7e56a96-7c4b-4899-f82a-916ff31a8ceb"
+        "outputId": "df36da78-80c2-4a27-ccf8-6c4ae495208b"
       },
-      "execution_count": 34,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +116,7 @@
       "metadata": {
         "id": "S65UxsNx49nC"
       },
-      "execution_count": 35,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -129,7 +131,7 @@
       "metadata": {
         "id": "z-_u5Cqm5Tv4"
       },
-      "execution_count": 36,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -140,7 +142,7 @@
       "metadata": {
         "id": "tuuvre8W6vcY"
       },
-      "execution_count": 37,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -152,12 +154,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 297
+          "height": 332
         },
         "id": "WMBGCENV0RV1",
-        "outputId": "2eaba32d-9f6a-42ec-9788-0c1f18ee75f8"
+        "outputId": "e6855e25-748d-4071-c5b4-bab4357696e4"
       },
-      "execution_count": 38,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,19 +167,21 @@
           "text": [
             "**Universidades Públicas:**\n",
             "\n",
-            "* **Universidade Federal de Minas Gerais (UFMG)** - MBA em Ciência de Dados e Inteligência Artificial\n",
-            "* **Universidade Federal do Rio Grande do Sul (UFRGS)** - MBA em Ciência de Dados e Inteligência Artificial\n",
-            "* **Universidade de São Paulo (USP)** - MBA em Ciência de Dados e Inteligência Analítica\n",
+            "* **Universidade de São Paulo (USP)** - MBA em Ciência de Dados e Big Data\n",
             "* **Universidade Federal do Rio de Janeiro (UFRJ)** - MBA em Ciência de Dados e Inteligência Artificial\n",
+            "* **Universidade Federal de Minas Gerais (UFMG)** - MBA em Ciência de Dados e Analytics\n",
             "* **Universidade Federal de Santa Catarina (UFSC)** - MBA em Ciência de Dados e Inteligência Artificial\n",
             "\n",
             "**Universidades Privadas:**\n",
             "\n",
-            "* **Fundação Getúlio Vargas (FGV)** - MBA em Ciência de Dados e Inteligência Artificial\n",
-            "* **Universidade Presbiteriana Mackenzie** - MBA em Ciência de Dados e Inteligência Artificial\n",
-            "* **Insper Instituto de Ensino e Pesquisa** - MBA em Ciência de Dados e Inteligência Artificial\n",
-            "* **PUC-Rio (Pontifícia Universidade Católica do Rio de Janeiro)** - MBA em Ciência de Dados e Inteligência Artificial\n",
-            "* **Universidade do Vale do Rio dos Sinos (UNISINOS)** - MBA em Ciência de Dados e Inteligência Artificial\n"
+            "* **FGV - Fundação Getulio Vargas** - MBA em Ciência de Dados e Inteligência Artificial\n",
+            "* **PUC-Rio - Pontifícia Universidade Católica do Rio de Janeiro** - MBA em Ciência de Dados e Inteligência Artificial\n",
+            "* **Insper** - MBA em Ciência de Dados e Inteligência Artificial\n",
+            "* **UniCEUB - Centro Universitário de Brasília** - MBA em Ciência de Dados e Analytics\n",
+            "* **Unip - Universidade Paulista** - MBA em Ciência de Dados e Inteligência Artificial\n",
+            "* **Unifesp - Universidade Federal de São Paulo** - MBA em Ciência de Dados e Inteligência Artificial\n",
+            "* **Uninove - Universidade Nove de Julho** - MBA em Ciência de Dados e Inteligência Artificial\n",
+            "* **UniRitter - Universidade Ritter dos Reis** - MBA em Ciência de Dados e Inteligência Artificial\n"
           ]
         }
       ]
@@ -190,7 +194,7 @@
       "metadata": {
         "id": "yvlw6ZIH46IT"
       },
-      "execution_count": 40,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -205,52 +209,71 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 659
+          "height": 1000
         },
         "id": "2egkGkH5_WBi",
-        "outputId": "9760074f-681d-44b8-81c2-8472060d72f5"
+        "outputId": "cb513578-d989-4564-86fc-4fb79df18c7c"
       },
-      "execution_count": 42,
+      "execution_count": 11,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Esperando prompt: Me dê sugestões de MBA de ciência de dados no brasil\n",
-            "resposta:  **Universidades Públicas:**\n",
+            "Esperando prompt: Qual o melhor MBA de data science do Brasil?\n",
+            "resposta:  **Melhores MBAs em Data Science no Brasil**\n",
             "\n",
-            "* **Universidade de São Paulo (USP)**\n",
-            "    * MBA em Ciência de Dados e Inteligência Artificial\n",
-            "* **Universidade Federal de Minas Gerais (UFMG)**\n",
-            "    * MBA em Ciência de Dados\n",
+            "De acordo com o ranking do Guia Exame 2023:\n",
             "\n",
-            "**Universidades Privadas:**\n",
+            "**1. FGV - Fundação Getulio Vargas (EAESP)**\n",
+            "* Localização: São Paulo\n",
+            "* Duração: 18 meses\n",
+            "* Destaques: Foco em inteligência artificial e aprendizado de máquina, professores renomados e forte rede de ex-alunos.\n",
             "\n",
-            "* **Fundação Getulio Vargas (FGV)**\n",
-            "    * MBA em Ciência de Dados e Inteligência Artificial\n",
-            "* **Universidade Presbiteriana Mackenzie**\n",
-            "    * MBA em Ciência de Dados e Inteligência Artificial\n",
-            "* **Universidade Católica do Rio de Janeiro (PUC-Rio)**\n",
-            "    * MBA em Ciência de Dados\n",
-            "* **Universidade Federal do Rio de Janeiro (UFRJ)**\n",
-            "    * MBA em Ciência de Dados e Inteligência Artificial\n",
-            "* **Universidade Federal do Rio Grande do Sul (UFRGS)**\n",
-            "    * MBA em Ciência de Dados\n",
-            "* **Universidade Federal de Santa Catarina (UFSC)**\n",
-            "    * MBA em Ciência de Dados e Inteligência Artificial\n",
-            "* **Universidade Estadual de Campinas (Unicamp)**\n",
-            "    * MBA em Ciência de Dados e Inteligência Artificial\n",
+            "**2. Insper Instituto de Ensino e Pesquisa**\n",
+            "* Localização: São Paulo\n",
+            "* Duração: 18 meses\n",
+            "* Destaques: Ênfase em análise de dados, visualização e tomada de decisão baseada em dados, parcerias com empresas de tecnologia.\n",
             "\n",
-            "**Outras Instituições:**\n",
+            "**3. USP - Universidade de São Paulo (FEAUSP)**\n",
+            "* Localização: São Paulo\n",
+            "* Duração: 18 meses\n",
+            "* Destaques: Programa interdisciplinar com foco em estatística, ciência da computação e negócios, corpo docente altamente qualificado.\n",
             "\n",
-            "* **Domus Academy**\n",
-            "    * MBA em Ciência de Dados\n",
-            "* **Escola Superior de Propaganda e Marketing (ESPM)**\n",
-            "    * MBA em Ciência de Dados e Inteligência Artificial\n",
-            "* **Instituto de Ensino e Pesquisa (Insper)**\n",
-            "    * MBA em Ciência de Dados e Inteligência Artificial\n",
-            "* **Universidade Positivo**\n",
-            "    * MBA em Ciência de Dados e Inteligência Artificial \n",
+            "**4. PUC-Rio - Pontifícia Universidade Católica do Rio de Janeiro (Coppead)**\n",
+            "* Localização: Rio de Janeiro\n",
+            "* Duração: 18 meses\n",
+            "* Destaques: Abordagem prática com projetos de consultoria, professores com experiência em data science e indústria.\n",
+            "\n",
+            "**5. UFMG - Universidade Federal de Minas Gerais (CEPEAD)**\n",
+            "* Localização: Belo Horizonte\n",
+            "* Duração: 18 meses\n",
+            "* Destaques: Foco em análise de dados, mineração de dados e aprendizado de máquina, professores com pesquisa ativa na área.\n",
+            "\n",
+            "**6. FGV - Fundação Getulio Vargas (EBAPE)**\n",
+            "* Localização: Rio de Janeiro\n",
+            "* Duração: 18 meses\n",
+            "* Destaques: Ênfase em gestão de dados, análise preditiva e tomada de decisão baseada em evidências.\n",
+            "\n",
+            "**7. ESPM - Escola Superior de Propaganda e Marketing**\n",
+            "* Localização: São Paulo\n",
+            "* Duração: 18 meses\n",
+            "* Destaques: Foco em marketing de dados, análise de clientes e estratégias de comunicação baseadas em dados.\n",
+            "\n",
+            "**8. UFPR - Universidade Federal do Paraná (CEFET-PR)**\n",
+            "* Localização: Curitiba\n",
+            "* Duração: 18 meses\n",
+            "* Destaques: Abordagem multidisciplinar com foco em análise de dados, computação em nuvem e inteligência artificial.\n",
+            "\n",
+            "**9. FGV - Fundação Getulio Vargas (EAESP)**\n",
+            "* Localização: Brasília\n",
+            "* Duração: 18 meses\n",
+            "* Destaques: Ênfase em análise de políticas públicas, gestão de dados do setor público e tomada de decisão baseada em evidências.\n",
+            "\n",
+            "**10. UFRGS - Universidade Federal do Rio Grande do Sul (EA)**\n",
+            "* Localização: Porto Alegre\n",
+            "* Duração: 18 meses\n",
+            "* Destaques: Foco em análise de dados, aprendizado de máquina e visualização de dados, corpo docente com ampla experiência em pesquisa. \n",
             "\n",
             "Esperando prompt: fim\n"
           ]
@@ -292,16 +315,16 @@
           "height": 106
         },
         "id": "WSGTrCRkCIW_",
-        "outputId": "ea27f83e-e562-4637-96e0-582b88f33441"
+        "outputId": "e7c33d10-6599-4027-b2af-fea830e77ed0"
       },
-      "execution_count": 43,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-43-1a921956bd3b>, line 7)",
+          "evalue": "invalid syntax (<ipython-input-12-1a921956bd3b>, line 7)",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-43-1a921956bd3b>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    From IPython.display import Markdown\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-1a921956bd3b>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    From IPython.display import Markdown\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ]
